@@ -1,14 +1,22 @@
 package hub.orcana.service;
 
-import hub.orcana.dto.agendamento.AgendamentoMapper;
+import hub.orcana.dto.agendamento.AdicionarMateriaisRequest;
 import hub.orcana.dto.agendamento.CadastroAgendamentoInput;
 import hub.orcana.dto.agendamento.DetalhesAgendamentoOutput;
+import hub.orcana.dto.agendamento.MaterialUsadoRequest;
+import hub.orcana.observer.AgendamentoObserver;
 import hub.orcana.tables.Agendamento;
+import hub.orcana.tables.EquipamentoUso;
+import hub.orcana.tables.Estoque;
 import hub.orcana.tables.Orcamento;
+import hub.orcana.tables.Relatorio;
 import hub.orcana.tables.StatusAgendamento;
 import hub.orcana.tables.Usuario;
 import hub.orcana.tables.repository.AgendamentoRepository;
+import hub.orcana.tables.repository.EquipamentoUsoRepository;
+import hub.orcana.tables.repository.EstoqueRepository;
 import hub.orcana.tables.repository.OrcamentoRepository;
+import hub.orcana.tables.repository.RelatorioRepository;
 import hub.orcana.tables.repository.UsuarioRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -38,6 +46,18 @@ class AgendamentoServiceTest {
 
     @Mock
     private OrcamentoRepository orcamentoRepository;
+
+    @Mock
+    private EmailService emailService;
+
+    @Mock
+    private RelatorioRepository relatorioRepository;
+
+    @Mock
+    private EquipamentoUsoRepository equipamentoUsoRepository;
+
+    @Mock
+    private EstoqueRepository estoqueRepository;
 
     @InjectMocks
     private AgendamentoService agendamentoService;
@@ -107,7 +127,7 @@ class AgendamentoServiceTest {
     @DisplayName("Deve retornar lista vazia quando não houver agendamentos")
     void deveRetornarListaVaziaQuandoNaoHouverAgendamentos() {
 
-        when(agendamentoRepository.findAll()).thenReturn(Arrays.asList());
+        when(agendamentoRepository.findAll()).thenReturn(List.of());
 
 
         List<DetalhesAgendamentoOutput> resultado = agendamentoService.getAgendamentos();
@@ -178,7 +198,7 @@ class AgendamentoServiceTest {
     @DisplayName("Deve retornar lista vazia quando não houver agendamentos com status especificado")
     void deveRetornarListaVaziaQuandoNaoHouverAgendamentosComStatus() {
 
-        when(agendamentoRepository.findAll()).thenReturn(Arrays.asList(agendamento));
+        when(agendamentoRepository.findAll()).thenReturn(List.of(agendamento));
 
 
         List<DetalhesAgendamentoOutput> resultado = agendamentoService.getAgendamentosByStatus("CANCELADO");
@@ -440,7 +460,7 @@ class AgendamentoServiceTest {
         agendamentoPassado.setUsuario(usuario);
         agendamentoPassado.setOrcamento(orcamento);
 
-        when(agendamentoRepository.findAll()).thenReturn(Arrays.asList(agendamentoPassado));
+        when(agendamentoRepository.findAll()).thenReturn(List.of(agendamentoPassado));
 
 
         List<String> datas = agendamentoService.getDatasOcupadas();
@@ -475,7 +495,7 @@ class AgendamentoServiceTest {
     @DisplayName("Deve retornar agendamentos por usuário")
     void deveRetornarAgendamentosPorUsuario() {
 
-        List<Agendamento> agendamentos = Arrays.asList(agendamento);
+        List<Agendamento> agendamentos = List.of(agendamento);
         when(agendamentoRepository.findByUsuarioId(1L)).thenReturn(agendamentos);
 
 
@@ -492,7 +512,7 @@ class AgendamentoServiceTest {
     @DisplayName("Deve retornar lista vazia quando usuário não tem agendamentos")
     void deveRetornarListaVaziaQuandoUsuarioNaoTemAgendamentos() {
 
-        when(agendamentoRepository.findByUsuarioId(999L)).thenReturn(Arrays.asList());
+        when(agendamentoRepository.findByUsuarioId(999L)).thenReturn(List.of());
 
 
         List<DetalhesAgendamentoOutput> resultado = agendamentoService.getAgendamentosPorUsuario(999L);
@@ -558,5 +578,339 @@ class AgendamentoServiceTest {
         );
         assertEquals("Orçamento não encontrado.", exception.getMessage());
         verify(agendamentoRepository, never()).save(any());
+    }
+
+    // ------------------ TESTES PARA OBSERVER PATTERN ------------------
+
+    @Test
+    @DisplayName("Deve adicionar observer com sucesso")
+    void deveAdicionarObserverComSucesso() {
+        // Arrange
+        AgendamentoObserver mockObserver = mock(AgendamentoObserver.class);
+
+        // Act
+        agendamentoService.attach(mockObserver);
+
+        // Assert - Verificação indireta através de notificação
+        agendamentoService.notifyObservers(agendamento);
+        verify(mockObserver, times(1)).updateAgendamento(agendamento);
+    }
+
+    @Test
+    @DisplayName("Deve remover observer com sucesso")
+    void deveRemoverObserverComSucesso() {
+        // Arrange
+        AgendamentoObserver mockObserver = mock(AgendamentoObserver.class);
+        agendamentoService.attach(mockObserver);
+
+        // Act
+        agendamentoService.detach(mockObserver);
+
+        // Assert - Observer não deve ser notificado após remoção
+        agendamentoService.notifyObservers(agendamento);
+        verify(mockObserver, never()).updateAgendamento(agendamento);
+    }
+
+    @Test
+    @DisplayName("Não deve adicionar observer duplicado")
+    void naoDeveAdicionarObserverDuplicado() {
+        // Arrange
+        AgendamentoObserver mockObserver = mock(AgendamentoObserver.class);
+
+        // Act - Adicionar o mesmo observer duas vezes
+        agendamentoService.attach(mockObserver);
+        agendamentoService.attach(mockObserver);
+
+        // Assert - Deve ser notificado apenas uma vez
+        agendamentoService.notifyObservers(agendamento);
+        verify(mockObserver, times(1)).updateAgendamento(agendamento);
+    }
+
+    @Test
+    @DisplayName("Deve notificar múltiplos observers")
+    void deveNotificarMultiplosObservers() {
+        // Arrange
+        AgendamentoObserver observer1 = mock(AgendamentoObserver.class);
+        AgendamentoObserver observer2 = mock(AgendamentoObserver.class);
+
+        agendamentoService.attach(observer1);
+        agendamentoService.attach(observer2);
+
+        // Act
+        agendamentoService.notifyObservers(agendamento);
+
+        // Assert
+        verify(observer1, times(1)).updateAgendamento(agendamento);
+        verify(observer2, times(1)).updateAgendamento(agendamento);
+    }
+
+    @Test
+    @DisplayName("Deve funcionar sem problemas quando não há observers")
+    void deveFuncionarSemObservers() {
+        // Act & Assert - Não deve lançar exceção
+        assertDoesNotThrow(() -> agendamentoService.notifyObservers(agendamento));
+    }
+
+    @Test
+    @DisplayName("Deve continuar notificando outros observers mesmo se um falhar")
+    void deveContinuarNotificandoMesmoSeUmObserverFalhar() {
+        // Arrange
+        AgendamentoObserver observer1 = mock(AgendamentoObserver.class);
+        AgendamentoObserver observer2 = mock(AgendamentoObserver.class);
+
+        // Observer1 lança exceção
+        doThrow(new RuntimeException("Falha do observer")).when(observer1).updateAgendamento(any());
+
+        agendamentoService.attach(observer1);
+        agendamentoService.attach(observer2);
+
+        // Act & Assert - Não deve lançar exceção e deve notificar observer2
+        assertDoesNotThrow(() -> agendamentoService.notifyObservers(agendamento));
+        verify(observer1, times(1)).updateAgendamento(agendamento);
+        verify(observer2, times(1)).updateAgendamento(agendamento);
+    }
+
+    // ------------------ TESTES PARA ADICIONAR MATERIAIS USADOS ------------------
+
+    @Test
+    @DisplayName("Deve adicionar materiais usados com sucesso")
+    void deveAdicionarMateriaisUsadosComSucesso() {
+        // Arrange
+        Relatorio relatorio = new Relatorio();
+        relatorio.setAgendamento(agendamento);
+        relatorio.setUsuario(usuario);
+
+        Estoque estoque = new Estoque("Tinta Preta", 50.0, "ml", 10.0);
+        estoque.setId(1L);
+
+        MaterialUsadoRequest materialRequest = new MaterialUsadoRequest(1L, 5);
+        AdicionarMateriaisRequest request = new AdicionarMateriaisRequest(List.of(materialRequest));
+
+        when(agendamentoRepository.findById(1L)).thenReturn(Optional.of(agendamento));
+        when(relatorioRepository.findByAgendamentoId(1L)).thenReturn(Optional.of(relatorio));
+        when(estoqueRepository.findById(1L)).thenReturn(Optional.of(estoque));
+        when(estoqueRepository.save(any(Estoque.class))).thenReturn(estoque);
+        when(equipamentoUsoRepository.save(any(EquipamentoUso.class))).thenReturn(new EquipamentoUso());
+
+        // Act
+        assertDoesNotThrow(() -> agendamentoService.adicionarMateriaisUsados(1L, request));
+
+        // Assert
+        verify(agendamentoRepository, times(1)).findById(1L);
+        verify(relatorioRepository, times(1)).findByAgendamentoId(1L);
+        verify(estoqueRepository, times(1)).findById(1L);
+        verify(equipamentoUsoRepository, times(1)).save(any(EquipamentoUso.class));
+        verify(estoqueRepository, times(1)).save(any(Estoque.class));
+    }
+
+    @Test
+    @DisplayName("Deve criar novo relatório quando não existir")
+    void deveCriarNovoRelatorioQuandoNaoExistir() {
+        // Arrange
+        Relatorio novoRelatorio = new Relatorio();
+        novoRelatorio.setAgendamento(agendamento);
+        novoRelatorio.setUsuario(usuario);
+
+        Estoque estoque = new Estoque("Tinta Preta", 50.0, "ml", 10.0);
+        estoque.setId(1L);
+
+        MaterialUsadoRequest materialRequest = new MaterialUsadoRequest(1L, 5);
+        AdicionarMateriaisRequest request = new AdicionarMateriaisRequest(List.of(materialRequest));
+
+        when(agendamentoRepository.findById(1L)).thenReturn(Optional.of(agendamento));
+        when(relatorioRepository.findByAgendamentoId(1L)).thenReturn(Optional.empty());
+        when(relatorioRepository.save(any(Relatorio.class))).thenReturn(novoRelatorio);
+        when(estoqueRepository.findById(1L)).thenReturn(Optional.of(estoque));
+        when(estoqueRepository.save(any(Estoque.class))).thenReturn(estoque);
+        when(equipamentoUsoRepository.save(any(EquipamentoUso.class))).thenReturn(new EquipamentoUso());
+
+        // Act
+        assertDoesNotThrow(() -> agendamentoService.adicionarMateriaisUsados(1L, request));
+
+        // Assert
+        verify(relatorioRepository, times(1)).save(any(Relatorio.class));
+    }
+
+    @Test
+    @DisplayName("Deve lançar exceção quando agendamento não encontrado para adicionar materiais")
+    void deveLancarExcecaoQuandoAgendamentoNaoEncontradoParaAdicionarMateriais() {
+        // Arrange
+        MaterialUsadoRequest materialRequest = new MaterialUsadoRequest(1L, 5);
+        AdicionarMateriaisRequest request = new AdicionarMateriaisRequest(List.of(materialRequest));
+
+        when(agendamentoRepository.findById(999L)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        IllegalArgumentException exception = assertThrows(
+                IllegalArgumentException.class,
+                () -> agendamentoService.adicionarMateriaisUsados(999L, request)
+        );
+        assertEquals("Agendamento não encontrado.", exception.getMessage());
+        verify(relatorioRepository, never()).save(any());
+        verify(equipamentoUsoRepository, never()).save(any());
+    }
+
+    @Test
+    @DisplayName("Deve lançar exceção quando material não encontrado")
+    void deveLancarExcecaoQuandoMaterialNaoEncontrado() {
+        // Arrange
+        Relatorio relatorio = new Relatorio();
+        relatorio.setAgendamento(agendamento);
+        relatorio.setUsuario(usuario);
+
+        MaterialUsadoRequest materialRequest = new MaterialUsadoRequest(999L, 5);
+        AdicionarMateriaisRequest request = new AdicionarMateriaisRequest(List.of(materialRequest));
+
+        when(agendamentoRepository.findById(1L)).thenReturn(Optional.of(agendamento));
+        when(relatorioRepository.findByAgendamentoId(1L)).thenReturn(Optional.of(relatorio));
+        when(estoqueRepository.findById(999L)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        IllegalArgumentException exception = assertThrows(
+                IllegalArgumentException.class,
+                () -> agendamentoService.adicionarMateriaisUsados(1L, request)
+        );
+        assertTrue(exception.getMessage().contains("Material não encontrado"));
+    }
+
+    @Test
+    @DisplayName("Deve lançar exceção quando estoque insuficiente")
+    void deveLancarExcecaoQuandoEstoqueInsuficiente() {
+        // Arrange
+        Relatorio relatorio = mock(Relatorio.class);
+        when(relatorio.getId()).thenReturn(1L);
+
+        Estoque estoque = new Estoque("Tinta Preta", 3.0, "ml", 10.0);
+        estoque.setId(1L);
+
+        MaterialUsadoRequest materialRequest = new MaterialUsadoRequest(1L, 20);
+        AdicionarMateriaisRequest request = new AdicionarMateriaisRequest(List.of(materialRequest));
+
+        when(agendamentoRepository.findById(1L)).thenReturn(Optional.of(agendamento));
+        when(relatorioRepository.findByAgendamentoId(1L)).thenReturn(Optional.of(relatorio));
+        when(estoqueRepository.findById(1L)).thenReturn(Optional.of(estoque));
+        doNothing().when(equipamentoUsoRepository).deleteByRelatorioId(1L);
+
+        // Verificar que a comparação funciona corretamente
+        assertTrue(3.0 < 20, "Comparação direta deveria ser verdadeira");
+
+        // Act & Assert
+        boolean excecaoLancada = false;
+        try {
+            agendamentoService.adicionarMateriaisUsados(1L, request);
+        } catch (IllegalArgumentException e) {
+            excecaoLancada = true;
+            System.out.println("Exceção capturada: " + e.getMessage());
+            assertTrue(e.getMessage().contains("Estoque insuficiente"),
+                    "Mensagem: " + e.getMessage());
+        } catch (Exception e) {
+            System.out.println("Outro tipo de exceção: " + e.getClass().getSimpleName() + " - " + e.getMessage());
+            excecaoLancada = true;
+        }
+
+        assertTrue(excecaoLancada, "Deveria ter lançado alguma exceção");
+        verify(equipamentoUsoRepository, never()).save(any());
+        verify(estoqueRepository, never()).save(any());
+    }
+
+    @Test
+    @DisplayName("Deve processar múltiplos materiais corretamente")
+    void deveProcessarMultiplosMateriaisCorretamente() {
+        // Arrange
+        Relatorio relatorio = new Relatorio();
+        relatorio.setAgendamento(agendamento);
+        relatorio.setUsuario(usuario);
+
+        Estoque estoque1 = new Estoque("Tinta Preta", 50.0, "ml", 10.0);
+        estoque1.setId(1L);
+        Estoque estoque2 = new Estoque("Agulha", 20.0, "unidade", 5.0);
+        estoque2.setId(2L);
+
+        MaterialUsadoRequest material1 = new MaterialUsadoRequest(1L, 5);
+        MaterialUsadoRequest material2 = new MaterialUsadoRequest(2L, 3);
+        AdicionarMateriaisRequest request = new AdicionarMateriaisRequest(List.of(material1, material2));
+
+        when(agendamentoRepository.findById(1L)).thenReturn(Optional.of(agendamento));
+        when(relatorioRepository.findByAgendamentoId(1L)).thenReturn(Optional.of(relatorio));
+        when(estoqueRepository.findById(1L)).thenReturn(Optional.of(estoque1));
+        when(estoqueRepository.findById(2L)).thenReturn(Optional.of(estoque2));
+        when(estoqueRepository.save(any(Estoque.class))).thenReturn(estoque1, estoque2);
+        when(equipamentoUsoRepository.save(any(EquipamentoUso.class))).thenReturn(new EquipamentoUso());
+
+        // Act
+        assertDoesNotThrow(() -> agendamentoService.adicionarMateriaisUsados(1L, request));
+
+        // Assert
+        verify(estoqueRepository, times(2)).findById(any());
+        verify(equipamentoUsoRepository, times(2)).save(any(EquipamentoUso.class));
+        verify(estoqueRepository, times(2)).save(any(Estoque.class));
+    }
+
+    @Test
+    @DisplayName("Deve atualizar estoque corretamente após usar materiais")
+    void deveAtualizarEstoqueCorretamenteAposUsarMateriais() {
+        // Arrange
+        Relatorio relatorio = new Relatorio();
+        relatorio.setAgendamento(agendamento);
+        relatorio.setUsuario(usuario);
+
+        Estoque estoque = new Estoque("Tinta Preta", 50.0, "ml", 10.0);
+        estoque.setId(1L);
+
+        MaterialUsadoRequest materialRequest = new MaterialUsadoRequest(1L, 15);
+        AdicionarMateriaisRequest request = new AdicionarMateriaisRequest(List.of(materialRequest));
+
+        when(agendamentoRepository.findById(1L)).thenReturn(Optional.of(agendamento));
+        when(relatorioRepository.findByAgendamentoId(1L)).thenReturn(Optional.of(relatorio));
+        when(estoqueRepository.findById(1L)).thenReturn(Optional.of(estoque));
+        when(estoqueRepository.save(any(Estoque.class))).thenReturn(estoque);
+        when(equipamentoUsoRepository.save(any(EquipamentoUso.class))).thenReturn(new EquipamentoUso());
+
+        // Act
+        agendamentoService.adicionarMateriaisUsados(1L, request);
+
+        // Assert - Verifica se o estoque foi atualizado corretamente
+        verify(estoqueRepository).save(argThat(e ->
+            e.getQuantidade().equals(35.0) // 50 - 15 = 35
+        ));
+    }
+
+    // ------------------ TESTES PARA NOTIFICAÇÃO DE OBSERVERS NO POST ------------------
+
+    @Test
+    @DisplayName("Deve notificar observers após criar agendamento com sucesso")
+    void deveNotificarObserversAposCriarAgendamento() {
+        // Arrange
+        AgendamentoObserver mockObserver = mock(AgendamentoObserver.class);
+        agendamentoService.attach(mockObserver);
+
+        when(usuarioRepository.findByEmail("joao@email.com")).thenReturn(Optional.of(usuario));
+        when(orcamentoRepository.findByCodigoOrcamento("ORC123")).thenReturn(Optional.of(orcamento));
+        when(agendamentoRepository.findByOrcamentoCodigoOrcamento("ORC123")).thenReturn(Optional.empty());
+        when(agendamentoRepository.save(any(Agendamento.class))).thenReturn(agendamento);
+
+        // Act
+        agendamentoService.postAgendamento(cadastroInput);
+
+        // Assert
+        verify(mockObserver, times(1)).updateAgendamento(agendamento);
+    }
+
+    @Test
+    @DisplayName("Não deve falhar se observer lançar exceção durante criação de agendamento")
+    void naoDeveFalharSeObserverLancarExcecaoAoCriarAgendamento() {
+        // Arrange
+        AgendamentoObserver mockObserver = mock(AgendamentoObserver.class);
+        doThrow(new RuntimeException("Erro no observer")).when(mockObserver).updateAgendamento(any());
+        agendamentoService.attach(mockObserver);
+
+        when(usuarioRepository.findByEmail("joao@email.com")).thenReturn(Optional.of(usuario));
+        when(orcamentoRepository.findByCodigoOrcamento("ORC123")).thenReturn(Optional.of(orcamento));
+        when(agendamentoRepository.findByOrcamentoCodigoOrcamento("ORC123")).thenReturn(Optional.empty());
+        when(agendamentoRepository.save(any(Agendamento.class))).thenReturn(agendamento);
+
+        // Act & Assert - Não deve lançar exceção
+        assertDoesNotThrow(() -> agendamentoService.postAgendamento(cadastroInput));
+        verify(mockObserver, times(1)).updateAgendamento(agendamento);
     }
 }
